--- a/src/main/resources/META-INF/resources/parts/menu.xhtml
+++ b/src/main/resources/META-INF/resources/parts/menu.xhtml
@@ -7,7 +7,7 @@
 <p:menu>
     <p:submenu label="Crawler">
         <p:menuitem value="Dashboard" icon="ui-icon-disk" url="/index.xhtml" />
-        <p:menuitem value="Websites" icon="ui-icon-disk" url="/websites.xhtml" />
+        <p:menuitem value="Websites" icon="ui-icon-disk" url="/websites/websites.xhtml" />
     </p:submenu>
     <p:submenu label="Settings">
         <p:menuitem value="Crawler settings" icon="ui-icon-arrowrefresh-1-w" url="/settings.xhtml"/>
