--- a/src/main/resources/META-INF/resources/websites/pagetypes.xhtml
+++ b/src/main/resources/META-INF/resources/websites/pagetypes.xhtml
@@ -64,7 +64,7 @@
                                              disabled="#{!pageTypesController.model.rowSelected}"
                                              update="content"
                                              icon="fa fa-remove"
-                                             value="Delete website">
+                                             value="Delete">
                                 <p:confirm header="Confirmation"
                                            message="Are you sure?" icon="ui-icon-alert"/>
                             </p:commandButton>
