Add parsed data view

--- a/src/main/resources/META-INF/resources/websites/fieldtypes.xhtml
+++ b/src/main/resources/META-INF/resources/websites/fieldtypes.xhtml
@@ -49,6 +49,9 @@
                         <p:column headerText="Code" filterable="true" filterBy="#{fieldType.code}">
                             <h:outputText value="#{fieldType.code}"/>
                         </p:column>
+                        <p:column headerText="CSS Selectors">
+                            <h:outputText value="#{fieldType.selectors}"/>
+                        </p:column>
                         <f:facet name="footer">
                             <p:commandButton
                                     value="Add new field type"
