--- a/src/main/resources/META-INF/resources/websites/parseddata.xhtml
+++ b/src/main/resources/META-INF/resources/websites/parseddata.xhtml
@@ -25,10 +25,13 @@
                     <ui:include src="..//parts/menu.xhtml"/>
                 </h:column>
                 <p:dataTable value="#{parsedDataController.model.pageTypes}" var="type">
-                    <p:column>
+                    <f:facet name="header">
+                        <h:outputText value="Page types" />
+                    </f:facet>
+                    <p:column headerText="Page type">
                         <h:outputText value="#{type.name}" />
                     </p:column>
-                    <p:column>
+                    <p:column headerText="Count">
                         <h:outputText value="#{parsedDataController.model.pageTypeCounter.get(type.code)}" />
                     </p:column>
                 </p:dataTable>
